# ChargerStation

./: README.md  platformio.ini  项目及资源版权声明.txt
UI/: ChargerStation.sll  ChargerStation.spj  ChargerStation_events.py  Themes.slt
UI/assets/: ui_font_ASCII16.c  ui_font_ASCII16.fcfg  ui_font_ASCII16MONO.c  ui_font_ASCII16MONO.fcfg  ui_font_ASCII20MONO.c  ui_font_ASCII20MONO.fcfg  ui_font_ASCII32.c  ui_font_ASCII32.fcfg  ui_font_ASCII32MONO.c  ui_font_ASCII32MONO.fcfg  ui_font_ASCII40MONO.c  ui_font_ASCII40MONO.fcfg  ui_font_CHN.c  ui_font_CHN.fcfg  ui_font_CHN24.fcfg
libdeps/denky32/TFT_eSPI/: User_Setup.h
src/: adc.cpp  adc.h  display.cpp  display.h  encoder.cpp  encoder.h  flash.cpp  flash.h  gpio.h  ina219.cpp  ina219.h  lvgl_event.cpp  lvgl_event.h  lvgl_group.cpp  lvgl_group.h  main.cpp  main.h  time_server.cpp  time_server.h  variables.cpp  variables.h  weather.cpp  weather.h  webpage.cpp  webpage.h  wifi_server.cpp  wifi_server.h
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
src/ui/fonts/: ui_font_ASCII20MONO.c  ui_font_ASCII40MONO.c
src/ui/images/: ui_img_1093450328.c  ui_img_1222334931.c  ui_img_123890670.c  ui_img_1338783594.c  ui_img_155116563.c  ui_img_1671917170.c  ui_img_175199537.c  ui_img_2003059303.c  ui_img_2092987087.c  ui_img_2103744591.c  ui_img_426970754.c  ui_img_593743026.c  ui_img_763584403.c  ui_img_852573520.c
src/ui/screens/: ui_ADCAdjustScreen.c  ui_MainScreen.c  ui_SettingScreen.c  ui_WeatherScreen.c  ui_WiFiScreen.c
(+1 files in other folders)
